@@ -13,22 +13,19 @@ import static org.junit.jupiter.api.Assertions.*;
 class CustomComparatorTest {
 
     @Test
-    public void sortTwoElementsNaturalOrder() {
-        List<Integer> intList = new ArrayList<>();
-        intList.add(3);
-        intList.add(2);
-
-        sort(intList, Comparator.naturalOrder());
-        assertEquals(intList.get(0), 2);
-        assertEquals(intList.get(1), 3);
+    public void partition() {
+        List<Integer> intList = new ArrayList<>(Arrays.asList(2, 6, 5, 3, 8, 7, 1, 0));
+        int pivotLocation = CustomComparator.partition(intList, 0, intList.size() - 1, Comparator.naturalOrder());
+        assertEquals(List.of(2, 1, 0, 3, 8, 7, 6, 5), intList);
+        assertEquals(3, pivotLocation);
     }
 
     @Test
-    public void partition() {
-        List<Integer> intList = new ArrayList<>(Arrays.asList(2, 6, 5, 3, 8, 7, 1, 0));
-        CustomComparator.partition(intList, 0, intList.size() - 1, Comparator.naturalOrder());
-        assertEquals(List.of(2, 1, 0, 3, 8, 7, 6, 5), intList);
-
+    public void partition2() {
+        List<Integer> intList = new ArrayList<>(Arrays.asList(2, 3, 5, 6, 8, 7, 1, 0));
+        int pivotLocation = CustomComparator.partition(intList, 0, intList.size() - 1, Comparator.naturalOrder());
+        assertEquals(List.of(2, 3, 5, 0, 1, 6, 8, 7), intList);
+        assertEquals(5, pivotLocation);
     }
 
 }
